--- a/transaction.html
+++ b/transaction.html
@@ -39,7 +39,7 @@
     <!-- navbar ends here  -->
 
     <div class="my-info text-center">
-        <h2>Account Holder: Monisha Dubey</h2>
+        <h2>Account Holder: Chirag Kundwani</h2>
         <h4>Available Bank Balance: ₹<span id="myAccountBalance">350000</span></h4>
     </div>
 
@@ -168,13 +168,13 @@
                     </tr>
                     <tr class="table-light1">
                         <td scope="row">5</td>
-                        <td>Tom</td>
-                        <td>tom@gmail.com</td>
+                        <td>Jiya</td>
+                        <td>jiya@gmail.com</td>
                         <td>
-                            <p id="tomBankBalance">7500</p>
+                            <p id="JiyaBankBalance">7500</p>
                         </td>
                         <td>
-                            <p id="tomPayment">00</p>
+                            <p id="jiyaPayment">00</p>
                         </td>
                     </tr>
                     <tr class="table-info1">
