--- a/customers.html
+++ b/customers.html
@@ -112,7 +112,7 @@
                     <tr class="table-light1">
                         <td scope="row">5</td>
                         <td>Mehak</td>
-                        <td>mehak@email.com</td>
+                        <td>mehak@gmail.com</td>
                         <td>
                             <p id="MehakBankBalance">9000</p>
                         </td>
